--- a/ReVolved/ReVolved.vcxproj.filters
+++ b/ReVolved/ReVolved.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="GameCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BloodParticle.cpp">
+      <Filter>Source Files\Particles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
