--- a/ReVolved/ReVolved.vcxproj
+++ b/ReVolved/ReVolved.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharDef.cpp" />
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FireParticle.cpp" />
     <ClCompile Include="Frame.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharDef.h" />
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FireParticle.h" />
     <ClInclude Include="Frame.h" />
