Initial Build of EvolvedAI
Build stable

--- a/ReVolved/ReVolved.vcxproj
+++ b/ReVolved/ReVolved.vcxproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="BaseAIEntity.h" />
     <ClInclude Include="BloodParticle.h" />
     <ClInclude Include="BodyParts.h" />
     <ClInclude Include="Character.h" />
@@ -124,6 +125,8 @@
     <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="ScriptEnums.h" />
     <ClInclude Include="ScriptLine.h" />
+    <ClInclude Include="State.h" />
+    <ClInclude Include="StateMachine.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\VS\Revolved\Revolved\mapFormat.txt" />
