--- a/ReVolved/ReVolved.vcxproj
+++ b/ReVolved/ReVolved.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\SFML-2.0-rc\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SFML-2.0-rc\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\SFML-2.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SFML-2.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
